# Emanation-From-1

./: .gitignore  README.md  pyproject.toml
docs/: EMANATION_RESEARCH_GUIDELINES.md  EVIDENCE_LEDGER.md  EXPERIMENT_BACKLOG.md  GILBREATH_TEST_PLAN.md  MODULAR_RETURN_THEOREM_CANDIDATE.md  ORIGIN_FIRST_RESEARCH_POSTURE.md  ORIGIN_PAKHETA_CALCULUS.md  ORIGIN_PAKHETA_CALCULUS_MILESTONE.md  ORIGIN_PAKHETA_CALCULUS_PREPRINT.md  ORIGIN_PAKHETA_CALCULUS_PROOFS.md  ORIGIN_PAKHETA_COMMUTATOR_CATALOG.md  ORIGIN_PAKHETA_PROOF_PROGRAM.md  ORIGIN_THEORY_RESEARCH_BRIDGE.md  RESEARCH_PROGRAM.md  SEMANTIC_VOLTAGE_RESEARCH.md  VERIFICATION_POLICY.md
experiments/: gilbreath_controls.py  gilbreath_deep_dive.py  gilbreath_gap_shuffle.py  gilbreath_k_history_markov_gap_model.py  gilbreath_markov_gap_model.py  gilbreath_prefix_block_shuffle.py  gilbreath_random_sweep.py  goldbach_neighborhood_transfer.py  goldbach_origin_correlations.py  initial_scan.py  origin_anchor_echo_fixed_points.py  origin_anchor_residual_transfer.py  origin_modular_group_controls.py  origin_modular_overlap_decomposition.py  origin_modular_overlap_knockout.py  origin_modular_return.py  origin_modular_shell_scaling.py  origin_modular_shell_transfer.py  origin_modular_signal_decomposition.py  origin_modular_theorem_probe.py  origin_pakheta_calculus.py  origin_pakheta_commutator_catalog.py  origin_size_banded_controls.py  origin_structure_scan.py  plot_prime_neighborhood_transfer.py  prime_gap_neighborhood_transfer.py  prime_gap_origin_prediction.py  prime_gap_origin_profiles.py  prime_gap_overlap_transfer.py  (+1 more)
(+108 files in other folders)
